part1/log-output/web/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output-web
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 8081
