part1/log-output/web/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: log-output-web-svc
                port:
                  number: 2345
